<resources>
    <string name="app_name">KuXing</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="detail">记事详情</string>
    <string name="map">地图</string>
    <string name="community">动态</string>
    <string name="mine">我的</string>
    <string name="update">修改记事</string>
    <string name="add_picture">插入图片</string>
    <string name="user">用户主页</string>
    <string name="user_name">用户名</string>
    <string name="signature">个性签名</string>
    <string name="noteNum">动态数</string>
    <string name="friendNum">好友数</string>
    <string name="followerNum">粉丝数</string>
    <string name="setting">设置</string>
</resources>
